# ChangeLog for games-emulation/bsnes
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2

  04 Jul 2011; Michał Ziąbkowski <mziab@o2.pl>
  -files/bsnes-0.064-makefile.patch, -files/bsnes-0.068-makefile.patch,
  -files/bsnes-0.069-makefile.patch, -bsnes-0.070.ebuild,
  -files/bsnes-0.070-makefile.patch, -bsnes-0.071.ebuild,
  -files/bsnes-0.071-makefile.patch, -bsnes-0.072.ebuild:
  Removed old patches.

  26 Dec 2010; Michał Ziąbkowski <mziab@o2.pl> bsnes-0.073.ebuild:
  Block on bsnes-qt.

  26 Dec 2010; Michał Ziąbkowski <mziab@o2.pl> bsnes-0.073.ebuild:
  Added missing supergameboy dep.

  25 Dec 2010; Michał Ziąbkowski <mziab@o2.pl> bsnes-0.073.ebuild,
  files/bsnes-0.073-makefile.patch:
  Cleaned up Makefile patch a bit.

  25 Dec 2010; Michał Ziąbkowski <mziab@o2.pl> bsnes-0.073.ebuild:
  Block on bsnes-phoenix.

*bsnes-0.073 (25 Dec 2010)

  25 Dec 2010; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.073.ebuild,
  +files/bsnes-0.073-makefile.patch:
  Bumped. Moved plugins out to separate packages in preparation for further
  changes.

*bsnes-0.072 (23 Oct 2010)

  23 Oct 2010; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.068.ebuild,
  -bsnes-0.069.ebuild, +bsnes-0.072.ebuild:
  Bumped. Remove some old ebuilds.

*bsnes-0.071 (22 Oct 2010)

  22 Oct 2010; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.071.ebuild,
  +files/bsnes-0.071-makefile.patch:
  Bumped. Sticking to the Qt gui for now.

  26 Sep 2010; Michał Ziąbkowski <mziab@o2.pl> bsnes-0.069.ebuild,
  files/bsnes-0.069-makefile.patch, files/bsnes-0.070-makefile.patch:
  Fixed one glaring omission in Makefile patches.

*bsnes-0.070 (26 Sep 2010)

  26 Sep 2010; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.070.ebuild,
  +files/bsnes-0.070-makefile.patch:
  Bumped again.

*bsnes-0.069 (25 Sep 2010)

  25 Sep 2010; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.069.ebuild,
  +files/bsnes-0.069-makefile.patch:
  Bumped.

*bsnes-0.068 (21 Aug 2010)
