@@ -1,15 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
-<pkgmetadata>
-<herd></herd>
-<maintainer>
-  <email>mziab@o2.pl</email>
-  <name>Michał Ziąbkowski</name>
-</maintainer>
-<use>
-	<flag name='profile_accuracy'>Enables the 'accuracy' emulation core</flag>
-	<flag name='profile_compatibility'>Enables the 'compatibility' emulation core</flag>
-	<flag name='profile_performance'>Enables the 'performance' emulation core</flag>
-	<flag name='sgb'>Enables Super Gameboy emulation</flag>
-</use>
-</pkgmetadata>
