@@ -1,5 +1,15 @@
 AUX bsnes-0.073-makefile.patch 1830 RMD160 db1f79d251f3bb375021c9366b5e6ea64cfa1a38 SHA1 7ac02884f73f1fef57861d4d5cd7f1ac0e05dc19 SHA256 20ff344d238364d157a1670063d8db261b695f6372ec0bf364b477129c44392c
+AUX bsnes-0.076-toolkit.patch 953 RMD160 f981d79dafd7b3e78164bcfc49fd34fc8655c18a SHA1 0725335c69c2102c341a5da085baea3a0ca6faa4 SHA256 41fe91939982de70216673d85ad11842cca29110bc813ff66fa6b6cf82522019
+AUX bsnes-0.077-makefile.patch 1369 RMD160 5c05c6f132c0c77e1206d0e96ee26c9a4aea2e9e SHA1 61c7e0e2c3823b5880f306a54dfcd2a214bee882 SHA256 75fdf7f9ee03e6adaeff0f5e80c302d7e5b6c99cf6c97265a6f39f892c2df4a4
 DIST bsnes_v073.tar.bz2 874627 RMD160 1f93da56929fcb70cf94f1dfd470e2b321da4f86 SHA1 eb49a8fbec684eedf32a340a712b578824e60587 SHA256 6a5c2706ef1d12d97705bbfad7e3a27b5ac04ef8a6c78548b327ea3a91850056
-EBUILD bsnes-0.073.ebuild 2276 RMD160 d8fa64be0f94a942e51ce5ccf52611b699a8f080 SHA1 d35611c92f45417aa93aa5438afc674bed2c3dc2 SHA256 0375bff6897f7f84404340bfc77713da9a928114c75c124b0e3090029b112247
-MISC ChangeLog 12945 RMD160 e1c964ad4ee458da520ca92010fca4668ff688c5 SHA1 eb9638d5b14540fc59bd6f883ce377df470f438e SHA256 4b06aa62d9d48808c2e496b542d07736d7e00832245e07989d7981d7ef704515
-MISC metadata.xml 566 RMD160 26a851455d9084720b1fa4bac734f22c9541741b SHA1 729bc585b67bad89af5fdb2fc8700a2637082a0f SHA256 5375d24d272cf0bbf3f0d8e38b032888b515c3c66b39d8032faa69a15469b776
+DIST bsnes_v077-source.tar.bz2 626689 RMD160 45beb2be9f27dce27ff8e6c0a57533bad1ff107f SHA1 f126ae565ffb2a6de00688bdbf83b36abae53a1f SHA256 7cdbde2bf3f9298bba16f185a071ff667e10e48523f77c1cda5f404b86188cfe
+DIST bsnes_v078-source.tar.bz2 649318 RMD160 bb420e381ab694c84518d2ae5d6ba3fa35238594 SHA1 f21828589c21ce3da9394ee196c16864bb35cff1 SHA256 97e859874e70626e4f3b572da2850f6c69558105d0a50a20904a50a0bdae0c7d
+DIST bsnes_v079-source.tar.bz2 679564 RMD160 8e91e981f49e8ce0ac81c492a7d264dbee9f8329 SHA1 ac26802f80db0b1c696df4d5d67396523f6f5726 SHA256 f477da2afb34bed556c3930b0baf1cb2f0d320811f8c0b0a67ba9abd138f522f
+DIST bsnes_v080-source.tar.bz2 676126 RMD160 5816a96e42de95c4572f7ac849fa80788ea080c3 SHA1 111d9771a86aafaf4606b2540eea645dddcdf24e SHA256 ac499e92eaf37fee7096d0656c3fd0ac49417e905a52e5a0c98393f28de82f7e
+EBUILD bsnes-0.073.ebuild 2217 RMD160 c27fa66c87bebef71e2940bccb41ef481920b7e4 SHA1 47421ff8c967997e21fa5ea1ba57fe3823b65736 SHA256 a6fcddeb6ce9df06314a6b94259c7addb29646eee642baf02c0cfeeb7998b308
+EBUILD bsnes-0.077.ebuild 2472 RMD160 272297ac3a7211aa707fbd0b5318a4239d54c3df SHA1 678dd87bcf54eeb8d423059feb1034d74e42fa92 SHA256 bb8066d99e764075d48a3002243036d50150ec0215726f452b39fc88fc31447f
+EBUILD bsnes-0.078.ebuild 2472 RMD160 272297ac3a7211aa707fbd0b5318a4239d54c3df SHA1 678dd87bcf54eeb8d423059feb1034d74e42fa92 SHA256 bb8066d99e764075d48a3002243036d50150ec0215726f452b39fc88fc31447f
+EBUILD bsnes-0.079.ebuild 2472 RMD160 272297ac3a7211aa707fbd0b5318a4239d54c3df SHA1 678dd87bcf54eeb8d423059feb1034d74e42fa92 SHA256 bb8066d99e764075d48a3002243036d50150ec0215726f452b39fc88fc31447f
+EBUILD bsnes-0.080.ebuild 2472 RMD160 272297ac3a7211aa707fbd0b5318a4239d54c3df SHA1 678dd87bcf54eeb8d423059feb1034d74e42fa92 SHA256 bb8066d99e764075d48a3002243036d50150ec0215726f452b39fc88fc31447f
+MISC ChangeLog 13351 RMD160 13b8b610ad1965204a38965453371d107c6d0734 SHA1 012250b730e58732bee915de5d14701d41530d51 SHA256 8118cf4bacfc139ece6815e4271b9d9c92115174378febf3cf10da0117023eca
+MISC metadata.xml 806 RMD160 a9a0dd2ed929ab89fcd23584c84100f3793bf0b9 SHA1 3b616ad96c4f38e725295a17803f86de19ae13bc SHA256 528a8adc526f82f3cba5a2bd502486660226b1198f1c5b85671e299d85d6e7ee
