@@ -32,9 +32,7 @@ RDEPEND="ao? ( media-libs/libao )
 
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig
-	>=sys-devel/gcc-4.4
-	!games-emulation/bsnes-phoenix
-	!games-emulation/bsnes-qt"
+	>=sys-devel/gcc-4.4"
 
 S="${WORKDIR}/${PN}"
 
