@@ -7,9 +7,12 @@
   <name>Michał Ziąbkowski</name>
 </maintainer>
 <use>
-  <flag name='debug'>Enables bsnes debugger</flag>
-  <flag name='sgb'>Enables Super Gameboy emulation</flag>
-  <flag name='snesfilter'>Enables additional image filters</flag>
-  <flag name='snesreader'>Provides extra loading features, including IPS patching and support for multiple compression formats</flag>
+	<flag name='debug'>Enables bsnes debugger</flag>
+	<flag name='profile_accuracy'>Enables the 'accuracy' emulation core</flag>
+	<flag name='profile_compatibility'>Enables the 'compatibility' emulation core</flag>
+	<flag name='profile_performance'>Enables the 'performance' emulation core</flag>
+	<flag name='sgb'>Enables Super Gameboy emulation</flag>
+	<flag name='snesfilter'>Enables additional image filters</flag>
+	<flag name='snesreader'>Provides extra loading features, including IPS patching and support for multiple compression formats</flag>
 </use>
 </pkgmetadata>
